@@ -32,6 +32,7 @@ depth: 1
  * Migrate initialization of classes (such as `body.ready`) from multiple JavaScript implementations to one Stimulus controller `w-init` (Chiemezuo Akujobi)
  * Adopt the usage of of translate string literals using `arg=_('...')` in all `wagtailadmin` module templates (Chiemezuo Akujobi)
  * Migrate the contrib styleguide index view to a class based view (Chiemezuo Akujobi)
+ * Update djhtml to 3.0.6 (Matt Westcott)
 
 
 ## Upgrade considerations - changes affecting all projects
