@@ -81,7 +81,7 @@
                         {% endblocktrans %}
                     </label>
                     <input type="text" name="confirm_site_name" class="w-mb-4"
-                        id="id_confirm_site_name" aria-describedby="id_confirm_site_name-warning" required>
+                           id="id_confirm_site_name" aria-describedby="id_confirm_site_name-warning" required>
                 {% endif %}
                 <input type="hidden" name="next" value="{{ next }}">
                 <input type="submit" value="{% trans 'Yes, delete it' %}" class="button serious">
