@@ -51,7 +51,7 @@
                 {% if trailing_breadcrumb_title or is_expanded %}data-w-breadcrumbs-target="content"{% endif %}
             >
                 <a class="{{ breadcrumb_link_classes }}"
-                    href="{{ breadcrumb_url }}{{ querystring_value }}">
+                   href="{{ breadcrumb_url }}{{ querystring_value }}">
                     {{ page.get_admin_display_title }}
                 </a>
                 {% if trailing_breadcrumb_title %}
