@@ -12,30 +12,30 @@
     {% test_page_is_public page as is_public %}
 
     <a href="{{ page.url }}" target="_blank" rel="noreferrer"
-        class="
-            page-status-tag
-            u-text-uppercase
-            w-inline-flex
-            w-items-center
-            w-justify-center
-            w-whitespace-nowrap
-            w-px-1
-            w-ml-3
-            w-text-[0.6875rem]
-            w-rounded-sm
-            w-bg-transparent
-            w-text-text-meta
-            w-border
-            w-border-border-furniture
-            w-no-underline
-            w-font-semibold
-            hover:w-border-surface-menus
-            hover:w-text-text-label
-            w-transition"
-        aria-label="{% if is_public %}{% trans 'Visible to all. Visit the live page' %}{% else %}{% trans 'Private. Visit the live page' %}{% endif %}"
-        data-controller="w-tooltip"
-        data-w-tooltip-content-value="{% if is_public %}{% trans 'Visible to all' %}{% else %}{% trans 'Private' %}{% endif %}"
-        data-w-tooltip-offset-value="[0, 13]"
+       class="
+              page-status-tag
+              u-text-uppercase
+              w-inline-flex
+              w-items-center
+              w-justify-center
+              w-whitespace-nowrap
+              w-px-1
+              w-ml-3
+              w-text-[0.6875rem]
+              w-rounded-sm
+              w-bg-transparent
+              w-text-text-meta
+              w-border
+              w-border-border-furniture
+              w-no-underline
+              w-font-semibold
+              hover:w-border-surface-menus
+              hover:w-text-text-label
+              w-transition"
+       aria-label="{% if is_public %}{% trans 'Visible to all. Visit the live page' %}{% else %}{% trans 'Private. Visit the live page' %}{% endif %}"
+       data-controller="w-tooltip"
+       data-w-tooltip-content-value="{% if is_public %}{% trans 'Visible to all' %}{% else %}{% trans 'Private' %}{% endif %}"
+       data-w-tooltip-offset-value="[0, 13]"
     >
 
         {% with icon_classes='privacy-indicator-icon w-w-4 w-h-4 w-mr-1' %}
