@@ -18,8 +18,8 @@
                 {% block action %}
                     {% if not hide_action %}
                         <a class="w-text-14 w-text-text-link-default hover:w-text-text-link-hover w-no-underline w-transition"
-                            href="{{ action_url }}"
-                            aria-describedby="status-sidebar-{{ title|cautious_slugify }}"
+                           href="{{ action_url }}"
+                           aria-describedby="status-sidebar-{{ title|cautious_slugify }}"
                         >
                             {{ action_text }}
                         </a>
