@@ -8,7 +8,7 @@
                 </h3>
             </div>
             <a class="w-text-14 w-text-text-link-default hover:w-text-text-link-hover w-no-underline w-transition"
-                href="{{ usage_url }}"
+               href="{{ usage_url }}"
             >
                 {% if usage_url_text %}
                     {{ usage_url_text }}
