@@ -12,6 +12,7 @@ Changelog
  * Maintenance: Migrate initialization of classes (such as `body.ready`) from multiple JavaScript implementations to one Stimulus controller `w-init` (Chiemezuo Akujobi)
  * Maintenance: Adopt the usage of of translate string literals using `arg=_('...')` in all `wagtailadmin` module templates (Chiemezuo Akujobi)
  * Maintenance: Migrate the contrib styleguide index view to a class based view (Chiemezuo Akujobi)
+ * Maintenance: Update djhtml to 3.0.6 (Matt Westcott)
 
 
 5.2 LTS (xx.xx.xxxx) - IN DEVELOPMENT
